--- a/cifar/l1-norm-pruning/quant_aware_training.yaml
+++ b/cifar/l1-norm-pruning/quant_aware_training.yaml
@@ -31,10 +31,10 @@ quantizers:
     quantize_inputs: False
     bits_activations: 8
     bits_weights: 8
-    mode: 'ASYMMETRIC_UNSIGNED'  # Can try "SYMMETRIC" as well
+    mode: "SYMMETRIC" #'ASYMMETRIC_UNSIGNED'  # Can try "SYMMETRIC" as well
     ema_decay: 0.999   # Decay value for exponential moving average tracking of activation ranges
-    # per_channel_wts: True
-    per_channel_wts: False
+    per_channel_wts: True
+#     per_channel_wts: False
 
 policies:
     - quantizer:
